API and request bug fixes, styling, site functionalities

--- a/fancy-cars/src/app/app.component.html
+++ b/fancy-cars/src/app/app.component.html
@@ -1,7 +1,6 @@
 <app-header/>
-{{isLoggedIn}}
-{{userInfo | json}}
-{{id | json}}
+<!-- {{id | json}}
+{{loggedUser | json}} -->
 <div class="root">
     <router-outlet/>
 </div>
