--- a/fancy-cars/src/app/cars/all-cars/all-cars.component.html
+++ b/fancy-cars/src/app/cars/all-cars/all-cars.component.html
@@ -1,2 +1,60 @@
-<h1>ALL CARS</h1>
-{{allCars | json}}
+<section id="hero">
+  <div class="hero-container" data-aos="fade-up">
+    <h1>Full list of all our users awesome cars</h1>
+    <div class="container mt-5">
+      <div class="row">
+
+        <div class="col-md-3" *ngFor="let car of allCars">
+          <div class="card">
+            <div class="image-container">
+              <div class="first">
+                <div class="d-flex justify-content-between align-items-center">
+                  <span class="wishlist"><i class="fa fa-heart-o"></i></span>
+                </div>
+              </div>
+
+              <img
+                src="{{car.image}}"
+                class="img-fluid rounded thumbnail-image"
+              />
+            </div>
+
+            <div class="product-detail-container p-2">
+              <div class="d-flex justify-content-between align-items-center">
+                <h5 class="dress-name">{{car.brand}} {{car.model}}</h5>
+                <h5 class="dress-name">Added by: {{car.owner.username}}</h5>
+              </div>
+
+              <div
+                class="d-flex justify-content-between align-items-center pt-1"
+              >
+                <div class="color-select d-flex">
+                  <input type="button" name="grey" class="btn creme" />
+
+                  <input
+                    type="button"
+                    name="darkblue"
+                    class="btn darkblue ml-2"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="mt-3">
+            <div class="card voutchers">
+              <div class="voutcher-divider">
+                <div class="voutcher-left text-center">
+                  <button routerLink="/cars/{{car._id}}/details" >DETAILS</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        
+
+      </div>
+    </div>
+  </div>
+</section>
