--- a/fancy-cars/src/app/cars/details/details.component.html
+++ b/fancy-cars/src/app/cars/details/details.component.html
@@ -1,1 +1,53 @@
-<p>details works!</p>
+<section id="hero">
+  <div class="hero-container" data-aos="fade-up">
+    <h1>{{ car?.brand }} {{ car?.model }}</h1>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+      integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
+      crossorigin="anonymous"
+    />
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5">
+          <div class="project-info-box mt-0">
+            <h5>About:</h5>
+            <p class="mb-0">{{ car?.description }}</p>
+          </div>
+          <!-- / project-info-box -->
+
+          <div class="project-info-box">
+            <p><b>Brand:</b> {{ car?.brand }}</p>
+            <p><b>Model</b> {{ car?.model }}</p>
+            <p><b>Engine</b> {{ car?.engine }}</p>
+            <p><b>Horsepower</b> {{ car?.horsepower }}</p>
+            <p><b>Fuel</b> {{ car?.fuel }}</p>
+            <p><b>Color</b> {{ car?.color }}</p>
+            <p><b>Year</b> {{ car?.year }}</p>
+            <p><b>Owner</b> {{ car?.owner?.username }}</p>
+            <!-- <p><b>Likes</b> {{ car?.likes?.length }}</p> -->
+            <p><b>Likes</b> {{ likesCounter }}</p>
+          </div>
+          <!-- / project-info-box -->
+
+          <div class="project-info-box mt-0 mb-0">
+            <p class="mb-0">
+              <span class="fw-bold mr-10 va-middle hide-mobile"></span>
+              <button (click)="likeCar()">LIKE</button>
+              <button routerLink="/cars/{{ car?._id }}/edit">EDIT</button>
+              <button (click)="deleteCar()">DELETE</button>
+            </p>
+          </div>
+          <!-- / project-info-box -->
+        </div>
+        <!-- / column -->
+
+        <div class="col-md-7">
+          <img src="{{ car?.image }}" alt="project-image" class="rounded" />
+          <!-- / project-info-box -->
+        </div>
+        <!-- / column -->
+      </div>
+    </div>
+  </div>
+</section>
