--- a/fancy-cars/src/app/user/login/login.component.html
+++ b/fancy-cars/src/app/user/login/login.component.html
@@ -1,53 +1,64 @@
-<div class="login-form">
-<h1>LOGIN FORM</h1>
+<section id="hero">
+  <div class="hero-container" data-aos="fade-up">
+    <h1>Hello, Fancy Cars Guest!</h1>
+    <h2>Please log-in by using the below form:</h2>
 
-<form #form="ngForm" (ngSubmit)="onLoginSubmitHandler(form)">
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input
-      type="email"
-      class="form-control"
-      id="exampleInputEmail1"
-      aria-describedby="emailHelp"
-      name="email"
-      placeholder="Enter email"
-      required
-      ngModel
-      #inputEmail="ngModel"
-    />
+    <form #form="ngForm" (ngSubmit)="onLoginSubmitHandler(form)">
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input
+          type="email"
+          class="form-control"
+          id="exampleInputEmail1"
+          aria-describedby="emailHelp"
+          name="email"
+          placeholder="Enter email"
+          required
+          ngModel
+          #inputEmail="ngModel"
+        />
+    
+        <div *ngIf="inputEmail.touched">
+          <p class="error" *ngIf="inputEmail.errors?.['required']">
+            Email is required!
+          </p>
+          <p
+            class="error"
+            *ngIf="!emailValidatorFn(inputEmail.value) && !inputEmail.errors?.['required']"
+          >
+            Email is invalid!
+          </p>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="exampleInputPassword1"
+          name="password"
+          placeholder="Password"
+          required
+          ngModel
+          #inputPassword="ngModel"
+        />
+    
+        <div *ngIf="inputPassword.touched">
+          <p class="error" *ngIf="inputPassword.errors?.['required']">
+            Password is required!
+          </p>
+        </div>
+      </div>
+    
+      <button type="submit" class="btn btn-primary">Submit</button>
 
-    <div *ngIf="inputEmail.touched">
-      <p class="error" *ngIf="inputEmail.errors?.['required']">
-        Email is required!
-      </p>
-      <p
-        class="error"
-        *ngIf="!emailValidatorFn(inputEmail.value) && !inputEmail.errors?.['required']"
-      >
-        Email is invalid!
-      </p>
-    </div>
+      <h2 routerLink="/user/register" style="cursor: pointer; color:rgba(255, 162, 0, 0.804);">Not registered yet? Click here to register!</h2>
+
+    </form>
   </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input
-      type="password"
-      class="form-control"
-      id="exampleInputPassword1"
-      name="password"
-      placeholder="Password"
-      required
-      ngModel
-      #inputPassword="ngModel"
-    />
+</section>
 
-    <div *ngIf="inputPassword.touched">
-      <p class="error" *ngIf="inputPassword.errors?.['required']">
-        Password is required!
-      </p>
-    </div>
-  </div>
 
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-</div>
+
+
+
