--- a/fancy-cars/src/app/cars/details/details.component.html
+++ b/fancy-cars/src/app/cars/details/details.component.html
@@ -1,5 +1,16 @@
 <section id="hero">
-  <div class="hero-container" data-aos="fade-up">
+  <div class="hero-container" data-aos="fade-up" *ngIf="hasError">
+    <h1>Wrong car ID!</h1>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+      integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
+      crossorigin="anonymous"
+    />
+    <a routerLink="/cars/all" class="btn btn-primary">Go to All Cars</a>
+  </div>
+
+  <div class="hero-container" data-aos="fade-up" *ngIf="!hasError">
     <h1>{{ car?.brand }} {{ car?.model }}</h1>
     <link
       rel="stylesheet"
@@ -7,7 +18,30 @@
       integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
       crossorigin="anonymous"
     />
-    <div class="container">
+
+    <div class="loading-container" *ngIf="isLoading">
+      <div class="loading-progress">
+        <div class="rotator">
+          <div class="rotator">
+            <div class="rotator colored">
+              <div class="rotator">
+                <div class="rotator colored">
+                  <div class="rotator colored"></div>
+                  <div class="rotator"></div>
+                </div>
+                <div class="rotator colored"></div>
+              </div>
+              <div class="rotator"></div>
+            </div>
+            <div class="rotator"></div>
+          </div>
+          <div class="rotator"></div>
+        </div>
+        <div class="rotator"></div>
+      </div>
+    </div>
+
+    <div class="container" *ngIf="!isLoading">
       <div class="row">
         <div class="col-md-5">
           <div class="project-info-box mt-0">
@@ -30,10 +64,17 @@
           </div>
           <!-- / project-info-box -->
 
-          <div class="project-info-box mt-0 mb-0">
-            <p class="mb-0">
+          <div class="project-info-box mt-0 mb-0" *ngIf="hasUser">
+            <p class="mb-0" *ngIf="!isOwner">
               <span class="fw-bold mr-10 va-middle hide-mobile"></span>
-              <button (click)="likeCar()">LIKE</button>
+
+              <button (click)="likeCar()" *ngIf="!hasLiked">LIKE</button>
+              <span *ngIf="hasLiked">You have already liked this car!</span>
+            </p>
+
+            <p class="mb-0" *ngIf="isOwner">
+              <span class="fw-bold mr-10 va-middle hide-mobile"></span>
+
               <button routerLink="/cars/{{ car?._id }}/edit">EDIT</button>
               <button (click)="deleteCar()">DELETE</button>
             </p>
