--- a/fancy-cars/src/app/cars/search/search.component.html
+++ b/fancy-cars/src/app/cars/search/search.component.html
@@ -1,5 +1,28 @@
 <section id="hero">
-  <div class="hero-container" data-aos="fade-up">
+
+  <div class="loading-container" *ngIf="isLoading">
+    <div class="loading-progress">
+        <div class="rotator">
+            <div class="rotator">
+                <div class="rotator colored">
+                    <div class="rotator">
+                        <div class="rotator colored">
+                            <div class="rotator colored"></div>
+                            <div class="rotator"></div>
+                        </div>
+                        <div class="rotator colored"></div>
+                    </div>
+                    <div class="rotator"></div>
+                </div>
+                <div class="rotator"></div>
+            </div>
+            <div class="rotator"></div>
+        </div>
+        <div class="rotator"></div>
+    </div>
+</div>
+
+  <div class="hero-container" data-aos="fade-up" *ngIf="!isLoading">
     <h1>You are looking for a particular car?</h1>
     <h2>Use our awesome search function to find it!</h2>
 
@@ -82,6 +105,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <h5 class="dress-name">{{car.brand}} {{car.model}}</h5>
                   <h5 class="dress-name">Added by: {{car.owner.username}}</h5>
+                  <h5 class="dress-name">{{car.description | shortenText}}</h5>
                 </div>
   
                 <div
