--- a/fancy-cars/src/app/user/login/login.component.html
+++ b/fancy-cars/src/app/user/login/login.component.html
@@ -3,9 +3,11 @@
     <h1>Hello, Fancy Cars Guest!</h1>
     <h2>Please log-in by using the below form:</h2>
 
+    <h2 *ngIf="backendErrorMsg" style="color: red;">{{backendErrorMsg}}</h2>
+
     <form #form="ngForm" (ngSubmit)="onLoginSubmitHandler(form)">
       <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
+        <label for="exampleInputEmail1" style="color: black; font-weight: bolder;">Email address</label>
         <input
           type="email"
           class="form-control"
@@ -19,11 +21,12 @@
         />
     
         <div *ngIf="inputEmail.touched">
-          <p class="error" *ngIf="inputEmail.errors?.['required']">
+          <p class="error" style="color: red; font-weight: bolder;" *ngIf="inputEmail.errors?.['required']">
             Email is required!
           </p>
           <p
             class="error"
+            style="color: red; font-weight: bolder;"
             *ngIf="!emailValidatorFn(inputEmail.value) && !inputEmail.errors?.['required']"
           >
             Email is invalid!
@@ -31,7 +34,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
+        <label for="exampleInputPassword1" style="color: black; font-weight: bolder;">Password</label>
         <input
           type="password"
           class="form-control"
@@ -44,7 +47,7 @@
         />
     
         <div *ngIf="inputPassword.touched">
-          <p class="error" *ngIf="inputPassword.errors?.['required']">
+          <p class="error" style="color: red; font-weight: bolder;" *ngIf="inputPassword.errors?.['required']">
             Password is required!
           </p>
         </div>
