--- a/fancy-cars/src/app/user/my-cars/my-cars.component.html
+++ b/fancy-cars/src/app/user/my-cars/my-cars.component.html
@@ -1,8 +1,32 @@
 <section id="hero" >
   <div class="hero-container" data-aos="fade-up">
     <h1>{{username}}'s Cars</h1>
+
+    <div class="loading-container" *ngIf="isLoading">
+      <div class="loading-progress">
+          <div class="rotator">
+              <div class="rotator">
+                  <div class="rotator colored">
+                      <div class="rotator">
+                          <div class="rotator colored">
+                              <div class="rotator colored"></div>
+                              <div class="rotator"></div>
+                          </div>
+                          <div class="rotator colored"></div>
+                      </div>
+                      <div class="rotator"></div>
+                  </div>
+                  <div class="rotator"></div>
+              </div>
+              <div class="rotator"></div>
+          </div>
+          <div class="rotator"></div>
+      </div>
+  </div>
+
     <div class="container mt-5" *ngIf="myCars.length !== 0">
-      <div class="row">
+
+      <div class="row" *ngIf="!isLoading">
 
         <div class="col-md-3" *ngFor="let car of myCars">
           <div class="card">
@@ -21,7 +45,7 @@
 
             <div class="product-detail-container p-2">
               <div class="d-flex justify-content-between align-items-center">
-                <h5 class="dress-name">{{car.brand}} {{car.model}}</h5>
+                <h5 class="dress-name">My awesome {{car.brand}} {{car.model}}</h5>
               </div>
 
               <div
