--- a/fancy-cars/src/app/cars/search/search.component.html
+++ b/fancy-cars/src/app/cars/search/search.component.html
@@ -128,7 +128,7 @@
               <div class="card voutchers">
                 <div class="voutcher-divider">
                   <div class="voutcher-left text-center">
-                    <button routerLink="/cars/{{car._id}}/details">DETAILS</button>
+                    <button routerLink="/cars/{{car._id}}/details" class="btn btn-primary">DETAILS</button>
                   </div>
                 </div>
               </div>
