--- a/fancy-cars/src/app/cars/details/details.component.html
+++ b/fancy-cars/src/app/cars/details/details.component.html
@@ -68,15 +68,15 @@
             <p class="mb-0" *ngIf="!isOwner">
               <span class="fw-bold mr-10 va-middle hide-mobile"></span>
 
-              <button (click)="likeCar()" *ngIf="!hasLiked">LIKE</button>
+              <button (click)="likeCar()" *ngIf="!hasLiked" class="btn btn-primary">LIKE</button>
               <span *ngIf="hasLiked">You have already liked this car!</span>
             </p>
 
             <p class="mb-0" *ngIf="isOwner">
               <span class="fw-bold mr-10 va-middle hide-mobile"></span>
 
-              <button routerLink="/cars/{{ car?._id }}/edit">EDIT</button>
-              <button (click)="deleteCar()">DELETE</button>
+              <button routerLink="/cars/{{ car?._id }}/edit" class="btn btn-primary">EDIT</button>
+              <button (click)="deleteCar()" class="btn btn-primary">DELETE</button>
             </p>
           </div>
           <!-- / project-info-box -->
