--- a/fancy-cars/src/app/cars/edit/edit.component.html
+++ b/fancy-cars/src/app/cars/edit/edit.component.html
@@ -1,12 +1,40 @@
 
 <section id="hero">
-    <div class="hero-container" data-aos="fade-up">
+
+    <div class="hero-container" data-aos="fade-up" >
+      <h1 *ngIf="hasError" style="color: red;">WRONG CAR ID</h1>
+      <h2 *ngIf="hasError" style="color: red;">Please, go back to the previous page!</h2>
       <h1>EDIT YOUR CAR</h1>
       <h2>PLEASE USE THE BELOW FORM: </h2>
-  <form #form="ngForm" (ngSubmit)="onEditSubmitHandler(form)">
+
+      
+    <div class="loading-container" *ngIf="isLoading">
+      <div class="loading-progress">
+        <div class="rotator">
+          <div class="rotator">
+            <div class="rotator colored">
+              <div class="rotator">
+                <div class="rotator colored">
+                  <div class="rotator colored"></div>
+                  <div class="rotator"></div>
+                </div>
+                <div class="rotator colored"></div>
+              </div>
+              <div class="rotator"></div>
+            </div>
+            <div class="rotator"></div>
+          </div>
+          <div class="rotator"></div>
+        </div>
+        <div class="rotator"></div>
+      </div>
+    </div>
+
+
+  <form #form="ngForm" (ngSubmit)="onEditSubmitHandler(form)" *ngIf="!isLoading">
   
     <div class="form-group">
-      <label for="exampleInputBrand">Description</label>
+      <label for="exampleInputBrand" style="color: black; font-weight: bolder;">Description</label>
       <input
         type="string"
         class="form-control"
@@ -16,15 +44,16 @@
         placeholder="Car description"
         required
         minlength="10"
+        maxlength="20"
         [(ngModel)]="car.description"
         #inputDescription="ngModel"
       />
   
       <div *ngIf="inputDescription.touched">
-        <p class="error" *ngIf="inputDescription.errors?.['required']">
+        <p class="error" *ngIf="inputDescription.errors?.['required']" style="color: red; font-weight: bolder;">
           Description is required!
         </p>
-        <p class="error" *ngIf="inputDescription.errors?.['minlength']">
+        <p class="error" *ngIf="inputDescription.errors?.['minlength']" style="color: red; font-weight: bolder;">
           Description length must be at least
           {{inputDescription.errors?.['minlength']['requiredLength']}}!
         </p>
@@ -32,7 +61,7 @@
     </div>
   
     <div class="form-group">
-      <label for="exampleInputBrand">Brand</label>
+      <label for="exampleInputBrand" style="color: black; font-weight: bolder;">Brand</label>
       <input
         type="string"
         class="form-control"
@@ -47,10 +76,10 @@
       />
   
       <div *ngIf="inputBrand.touched">
-        <p class="error" *ngIf="inputBrand.errors?.['required']">
+        <p class="error" *ngIf="inputBrand.errors?.['required']" style="color: red; font-weight: bolder;">
           Brand is required!
         </p>
-        <p class="error" *ngIf="inputBrand.errors?.['minlength']">
+        <p class="error" *ngIf="inputBrand.errors?.['minlength']" style="color: red; font-weight: bolder;">
           Brand length must be at least
           {{inputBrand.errors?.['minlength']['requiredLength']}}!
         </p>
@@ -58,7 +87,7 @@
     </div>
   
     <div class="form-group">
-      <label for="exampleInputModel">Model</label>
+      <label for="exampleInputModel" style="color: black; font-weight: bolder;">Model</label>
       <input
         type="string"
         class="form-control"
@@ -73,10 +102,10 @@
       />
   
       <div *ngIf="inputModel.touched">
-        <p class="error" *ngIf="inputModel.errors?.['required']">
+        <p class="error" *ngIf="inputModel.errors?.['required']" style="color: red; font-weight: bolder;">
           Model is required!
         </p>
-        <p class="error" *ngIf="inputModel.errors?.['minlength']">
+        <p class="error" *ngIf="inputModel.errors?.['minlength']" style="color: red; font-weight: bolder;">
           Model length must be at least
           {{inputModel.errors?.['minlength']['requiredLength']}}!
         </p>
@@ -84,7 +113,7 @@
     </div>
   
     <div class="form-group">
-      <label for="exampleInputEngine">Engine Type</label>
+      <label for="exampleInputEngine" style="color: black; font-weight: bolder;">Engine Type</label>
       <input
         type="string"
         class="form-control"
@@ -99,10 +128,10 @@
       />
   
       <div *ngIf="inputEngine.touched">
-        <p class="error" *ngIf="inputEngine.errors?.['required']">
+        <p class="error" *ngIf="inputEngine.errors?.['required']" style="color: red; font-weight: bolder;">
           Engine is required!
         </p>
-        <p class="error" *ngIf="inputEngine.errors?.['minlength']">
+        <p class="error" *ngIf="inputEngine.errors?.['minlength']" style="color: red; font-weight: bolder;">
           Engine length must be at least
           {{inputEngine.errors?.['minlength']['requiredLength']}}!
         </p>
@@ -110,7 +139,7 @@
     </div>
   
     <div class="form-group">
-      <label for="exampleInputPower">Horsepower</label>
+      <label for="exampleInputPower" style="color: black; font-weight: bolder;">Horsepower</label>
       <input
         type="number"
         class="form-control"
@@ -125,17 +154,17 @@
       />
   
       <div *ngIf="inputHorsePower.touched">
-        <p class="error" *ngIf="inputHorsePower.errors?.['required']">
+        <p class="error" *ngIf="inputHorsePower.errors?.['required']" style="color: red; font-weight: bolder;">
           Horsepower is required!
         </p>
-        <p class="error" *ngIf="inputHorsePower.errors?.['min']">
+        <p class="error" *ngIf="inputHorsePower.errors?.['min']" style="color: red; font-weight: bolder;">
           Horsepowe can't be 0!
         </p>
       </div>
     </div>
   
     <div class="form-group">
-      <label for="exampleInputFuel">Fuel</label>
+      <label for="exampleInputFuel" style="color: black; font-weight: bolder;">Fuel</label>
       <input
         type="string"
         class="form-control"
@@ -150,10 +179,10 @@
       />
   
       <div *ngIf="inputFuel.touched">
-        <p class="error" *ngIf="inputFuel.errors?.['required']">
+        <p class="error" *ngIf="inputFuel.errors?.['required']" style="color: red; font-weight: bolder;">
           Fuel type is required!
         </p>
-        <p class="error" *ngIf="inputFuel.errors?.['minlength']">
+        <p class="error" *ngIf="inputFuel.errors?.['minlength']" style="color: red; font-weight: bolder;">
           Fuel length must be at least
           {{inputFuel.errors?.['minlength']['requiredLength']}}!
         </p>
@@ -161,7 +190,7 @@
     </div>
   
     <div class="form-group">
-      <label for="exampleInputColor">Color</label>
+      <label for="exampleInputColor" style="color: black; font-weight: bolder;">Color</label>
       <input
         type="string"
         class="form-control"
@@ -176,10 +205,10 @@
       />
   
       <div *ngIf="inputColor.touched">
-        <p class="error" *ngIf="inputColor.errors?.['required']">
+        <p class="error" *ngIf="inputColor.errors?.['required']" style="color: red; font-weight: bolder;">
           Color is required!
         </p>
-        <p class="error" *ngIf="inputColor.errors?.['minlength']">
+        <p class="error" *ngIf="inputColor.errors?.['minlength']" style="color: red; font-weight: bolder;">
           Color length must be at least
           {{inputColor.errors?.['minlength']['requiredLength']}}!
         </p>
@@ -187,9 +216,9 @@
     </div>
   
     <div class="form-group">
-      <label for="exampleInputYear">Year</label>
+      <label for="exampleInputYear" style="color: black; font-weight: bolder;">Year</label>
       <input
-        type="string"
+        type="number"
         class="form-control"
         id="exampleInputYearHelp"
         name="year"
@@ -201,17 +230,17 @@
       />
   
       <div *ngIf="inputYear.touched">
-        <p class="error" *ngIf="inputYear.errors?.['required']">
+        <p class="error" *ngIf="inputYear.errors?.['required']" style="color: red; font-weight: bolder;">
           Year is required!
         </p>
-        <p class="error" *ngIf="inputYear.errors?.['min']">
+        <p class="error" *ngIf="inputYear.errors?.['min']" style="color: red; font-weight: bolder;">
           Car can't be older than 1900!
         </p>
       </div>
     </div>
   
     <div class="form-group">
-      <label for="exampleInputImageUrl">Image URL</label>
+      <label for="exampleInputImageUrl" style="color: black; font-weight: bolder;">Image URL</label>
       <input
         type="string"
         class="form-control"
@@ -224,10 +253,10 @@
       />
   
       <div *ngIf="inputimageUrl.touched">
-        <p class="error" *ngIf="inputimageUrl.errors?.['required']">
+        <p class="error" *ngIf="inputimageUrl.errors?.['required']" style="color: red; font-weight: bolder;">
           Image URL is required!
         </p>
-        <p class="error" *ngIf="!carImageValidator(inputimageUrl.value)">Image URL must start with http:// or https://!</p>
+        <p class="error" *ngIf="!carImageValidator(inputimageUrl.value)" style="color: red; font-weight: bolder;">Image URL must start with http:// or https://!</p>
       </div>
     </div>
   
@@ -235,6 +264,7 @@
   </form>
   
     </div>
+ 
   </section>
   
   
