HTML and CSS improvements

--- a/fancy-cars/src/app/cars/all-cars/all-cars.component.css
+++ b/fancy-cars/src/app/cars/all-cars/all-cars.component.css
@@ -562,3 +562,13 @@ b, strong {
 .loading-container .colored {
   background-color: #2dc3e8!important;
 }
+
+/* center */
+
+.center {
+  position: absolute;
+  top: 1%;
+  left: 6%;
+  right: 5%;
+  bottom: 5%;
+}
