--- a/fancy-cars/src/app/cars/edit/edit.component.html
+++ b/fancy-cars/src/app/cars/edit/edit.component.html
@@ -29,7 +29,7 @@
       </div>
     </div>
 
-    <h1 *ngIf="!isOwner" style="color: red;">YOU ARE NOT THE CAR OWNER AND CAN'T EDIT IT!</h1>
+    <h1 *ngIf="!isOwner" style="color: red;">YOU SHOULD NOT BE HERE!</h1>
 
     <div *ngIf="isOwner">
       <form
