--- a/fancy-cars/src/app/core/header/header.component.html
+++ b/fancy-cars/src/app/core/header/header.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <img class="customLogo" src="../../../assets/smallLogo.jpg" routerLink="/"/>
   <div>
-    <p *ngIf="hasUser">Hello, {{username}}!</p>
+    <p *ngIf="hasUser" style="font-weight: bolder;">Hello, {{username}}!</p>
     <!-- <p *ngIf="!userEmail">Hello, Guest!</p> -->
   </div>  
   <button
