--- a/fancy-cars/src/app/cars/search/search.component.html
+++ b/fancy-cars/src/app/cars/search/search.component.html
@@ -82,63 +82,19 @@
 
     <h1  *ngIf="!hasResult">Unfortunately Nothing was found!</h1>
 
-    <div *ngIf="filteredCars.length > 0">
-      <div class="container mt-5">
-        <div class="row">
-  
-          <div class="col-md-3" *ngFor="let car of filteredCars">
-            <div class="card">
-              <div class="image-container">
-                <div class="first">
-                  <div class="d-flex justify-content-between align-items-center">
-                    <span class="wishlist"><i class="fa fa-heart-o"></i></span>
-                  </div>
-                </div>
-  
-                <img
-                  src="{{car.image}}"
-                  class="img-fluid rounded thumbnail-image"
-                />
-              </div>
-  
-              <div class="product-detail-container p-2">
-                <div class="d-flex justify-content-between align-items-center">
-                  <h5 class="dress-name">{{car.brand}} {{car.model}}</h5>
-                  <h5 class="dress-name">Added by: {{car.owner.username}}</h5>
-                  <h5 class="dress-name">{{car.description | shortenText}}</h5>
-                </div>
-  
-                <div
-                  class="d-flex justify-content-between align-items-center pt-1"
-                >
-                  <div class="color-select d-flex">
-                    <input type="button" name="grey" class="btn creme" />
-  
-                    <input
-                      type="button"
-                      name="darkblue"
-                      class="btn darkblue ml-2"
-                    />
-                  </div>
-                </div>
-              </div>
-            </div>
-  
-            <div class="mt-3">
-              <div class="card voutchers">
-                <div class="voutcher-divider">
-                  <div class="voutcher-left text-center">
-                    <button routerLink="/cars/{{car._id}}/details" class="btn btn-primary">DETAILS</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-  
-          
-  
+    <div *ngIf="filteredCars.length > 0" class="row" style="gap: 1rem;">
+
+      <div class="card" style="width: 18rem;" *ngFor="let car of filteredCars">
+        <img src={{car.image}} class="card-img-top"  style="height: 60%;" alt="...">
+        <div class="card-body" style="height: 40%;">
+          <h5 class="card-title">{{car.brand}} {{car.model}}</h5>
+          <p class="card-text">{{car.description | shortenText}}</p>
+          <p class="card-text">Added by: {{car.owner.username}}</p>
+          <a routerLink="/cars/{{car._id}}/details" class="btn btn-primary">Details</a>
         </div>
       </div>
+
+
     </div>
 
   </div>
