--- a/fancy-cars/src/app/user/my-cars/my-cars.component.html
+++ b/fancy-cars/src/app/user/my-cars/my-cars.component.html
@@ -24,58 +24,18 @@
       </div>
   </div>
 
-    <div class="container mt-5" *ngIf="myCars.length !== 0">
+    <div class="center" *ngIf="myCars.length !== 0">
 
-      <div class="row" *ngIf="!isLoading">
-
-        <div class="col-md-3" *ngFor="let car of myCars">
-          <div class="card">
-            <div class="image-container">
-              <div class="first">
-                <div class="d-flex justify-content-between align-items-center">
-                  <span class="wishlist"><i class="fa fa-heart-o"></i></span>
-                </div>
-              </div>
-
-              <img
-                src="{{car.image}}"
-                class="img-fluid rounded thumbnail-image"
-              />
-            </div>
-
-            <div class="product-detail-container p-2">
-              <div class="d-flex justify-content-between align-items-center">
-                <h5 class="dress-name">My awesome {{car.brand}} {{car.model}}</h5>
-              </div>
-
-              <div
-                class="d-flex justify-content-between align-items-center pt-1"
-              >
-                <div class="color-select d-flex">
-                  <input type="button" name="grey" class="btn creme" />
-
-                  <input
-                    type="button"
-                    name="darkblue"
-                    class="btn darkblue ml-2"
-                  />
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="mt-3">
-            <div class="card voutchers">
-              <div class="voutcher-divider">
-                <div class="voutcher-left text-center">
-                  <button routerLink="/cars/{{car._id}}/details" class="btn btn-primary">DETAILS</button>
-                </div>
-              </div>
-            </div>
+      <div *ngIf="!isLoading" class="row" style="gap: 1rem;">
+        <div class="card" style="width: 18rem;" *ngFor="let car of myCars">
+          <img src={{car.image}} class="card-img-top"  style="height: 60%;" alt="...">
+          <div class="card-body" style="height: 40%;">
+            <h5 class="card-title">My awesome {{car.brand}} {{car.model}}</h5>
+            <a routerLink="/cars/{{car._id}}/details" class="btn btn-primary">Details</a>
           </div>
         </div>
-
       </div>
+
     </div>
 
     <div *ngIf="myCars.length === 0">
