Reusable HTML and CSS template for the whole site, removing a lot of repeating code

--- a/fancy-cars/src/app/cars/add-new/add-new.component.html
+++ b/fancy-cars/src/app/cars/add-new/add-new.component.html
@@ -1,5 +1,4 @@
-<section id="hero">
-  <div class="hero-container" data-aos="fade-up">
+<app-hero>
     <h1>ADD NEW CAR</h1>
     <h2>ADD YOUR AWESOME CAR BY USING THE BELOW FORM: </h2>
 <form #form="ngForm" (ngSubmit)="onAddNewCarSubmitHandler(form)">
@@ -234,6 +233,5 @@
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
-  </div>
-</section>
+</app-hero>
 
