--- a/fancy-cars/src/app/cars/all-cars/all-cars.component.html
+++ b/fancy-cars/src/app/cars/all-cars/all-cars.component.html
@@ -1,5 +1,4 @@
-<section id="hero">
-  <div class="hero-container" data-aos="fade-up">
+<app-hero>
 
     <div class="center">
     
@@ -41,5 +40,4 @@
     </div>
 
   </div>
-  </div>
-</section>
+</app-hero>
