--- a/fancy-cars/src/app/cars/details/details.component.html
+++ b/fancy-cars/src/app/cars/details/details.component.html
@@ -1,5 +1,5 @@
-<section id="hero">
-  <div class="hero-container" data-aos="fade-up" *ngIf="hasError">
+<app-hero>
+  <div *ngIf="hasError">
     <h1>Wrong car ID!</h1>
     <link
       rel="stylesheet"
@@ -91,4 +91,4 @@
       </div>
     </div>
   </div>
-</section>
+</app-hero>
