--- a/fancy-cars/src/app/cars/edit/edit.component.html
+++ b/fancy-cars/src/app/cars/edit/edit.component.html
@@ -1,5 +1,4 @@
-<section id="hero">
-  <div class="hero-container" data-aos="fade-up">
+<app-hero>
     <h1 *ngIf="hasError" style="color: red">WRONG CAR ID</h1>
     <h2 *ngIf="hasError" style="color: red">
       Please, go back to the previous page!
@@ -377,5 +376,4 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
-  </div>
-</section>
+  </app-hero>
