--- a/fancy-cars/src/app/not-found/not-found.component.html
+++ b/fancy-cars/src/app/not-found/not-found.component.html
@@ -1,5 +1,4 @@
-<section id="hero">
-  <div class="hero-container" data-aos="fade-up">
+<app-hero>
     <div class="d-flex align-items-center justify-content-center vh-100">
       <div class="text-center">
         <h1 class="display-1 fw-bold">404</h1>
@@ -8,7 +7,5 @@
         <a routerLink="/" class="btn btn-primary">Go Home</a>
       </div>
     </div>
-  </div>
-</section>
-
+  </app-hero>
 
