--- a/fancy-cars/src/app/templates/hero/hero.component.html
+++ b/fancy-cars/src/app/templates/hero/hero.component.html
@@ -1,5 +1,5 @@
 <section id="hero">
     <div class="hero-container" data-aos="fade-up">
-     
+     <ng-content></ng-content>
     </div>
   </section>
