--- a/fancy-cars/src/app/user/login/login.component.html
+++ b/fancy-cars/src/app/user/login/login.component.html
@@ -1,5 +1,4 @@
-<section id="hero">
-  <div class="hero-container" data-aos="fade-up">
+<app-hero>
     <h1>Hello, Fancy Cars Guest!</h1>
     <h2>Please log-in by using the below form:</h2>
 
@@ -58,9 +57,7 @@
       <h2 routerLink="/user/register" style="cursor: pointer; color:rgba(255, 162, 0, 0.804);">Not registered yet? Click here to register!</h2>
 
     </form>
-  </div>
-</section>
-
+  </app-hero>
 
 
 
