--- a/fancy-cars/src/app/user/my-cars/my-cars.component.html
+++ b/fancy-cars/src/app/user/my-cars/my-cars.component.html
@@ -1,5 +1,4 @@
-<section id="hero" >
-  <div class="hero-container" data-aos="fade-up">
+<app-hero>
     <h1>{{username}}'s Cars</h1>
 
     <div class="loading-container" *ngIf="isLoading">
@@ -42,6 +41,4 @@
       <h1>You haven't added any cars yet...</h1>
     </div>
 
-  </div>
-</section>
-
+  </app-hero>
