--- a/fancy-cars/src/app/user/register/register.component.html
+++ b/fancy-cars/src/app/user/register/register.component.html
@@ -1,5 +1,4 @@
-<section id="hero">
-  <div class="hero-container" data-aos="fade-up">
+<app-hero>
     <h1>Hello, Fancy Cars Guest!</h1>
     <h2>You can register by using the below form:</h2>
 
@@ -161,5 +160,4 @@
         Already registered? Click here to login!
       </h2>
     </form>
-  </div>
-</section>
+  </app-hero>
