--- a/fancy-cars/src/app/home/home.component.html
+++ b/fancy-cars/src/app/home/home.component.html
@@ -1,6 +1,4 @@
-<section id="hero">
-    <div class="hero-container" data-aos="fade-up">
+<app-hero>
      <h1>Welcome to Fancy Cars!</h1>
      <h2>A place for car lovers to share their pride and joy and check out other people's vehicles too.</h2>
-    </div>
-  </section>
+</app-hero>
