--- a/fancy-cars/src/app/cars/details/details.component.html
+++ b/fancy-cars/src/app/cars/details/details.component.html
@@ -19,27 +19,9 @@
       crossorigin="anonymous"
     />
 
-    <div class="loading-container" *ngIf="isLoading">
-      <div class="loading-progress">
-        <div class="rotator">
-          <div class="rotator">
-            <div class="rotator colored">
-              <div class="rotator">
-                <div class="rotator colored">
-                  <div class="rotator colored"></div>
-                  <div class="rotator"></div>
-                </div>
-                <div class="rotator colored"></div>
-              </div>
-              <div class="rotator"></div>
-            </div>
-            <div class="rotator"></div>
-          </div>
-          <div class="rotator"></div>
-        </div>
-        <div class="rotator"></div>
+    <div *ngIf="isLoading">
+      <app-loader/>
       </div>
-    </div>
 
     <div class="container" *ngIf="!isLoading">
       <div class="row">
