--- a/fancy-cars/src/app/cars/edit/edit.component.html
+++ b/fancy-cars/src/app/cars/edit/edit.component.html
@@ -6,27 +6,9 @@
     <h1>EDIT YOUR CAR</h1>
     <h2>PLEASE USE THE BELOW FORM:</h2>
 
-    <div class="loading-container" *ngIf="isLoading">
-      <div class="loading-progress">
-        <div class="rotator">
-          <div class="rotator">
-            <div class="rotator colored">
-              <div class="rotator">
-                <div class="rotator colored">
-                  <div class="rotator colored"></div>
-                  <div class="rotator"></div>
-                </div>
-                <div class="rotator colored"></div>
-              </div>
-              <div class="rotator"></div>
-            </div>
-            <div class="rotator"></div>
-          </div>
-          <div class="rotator"></div>
-        </div>
-        <div class="rotator"></div>
+    <div *ngIf="isLoading">
+      <app-loader/>
       </div>
-    </div>
 
     <h1 *ngIf="!isOwner" style="color: red;">YOU SHOULD NOT BE HERE!</h1>
 
