--- a/fancy-cars/src/app/cars/search/search.component.html
+++ b/fancy-cars/src/app/cars/search/search.component.html
@@ -1,26 +1,8 @@
 <app-hero>
 
-  <div class="loading-container" *ngIf="isLoading">
-    <div class="loading-progress">
-        <div class="rotator">
-            <div class="rotator">
-                <div class="rotator colored">
-                    <div class="rotator">
-                        <div class="rotator colored">
-                            <div class="rotator colored"></div>
-                            <div class="rotator"></div>
-                        </div>
-                        <div class="rotator colored"></div>
-                    </div>
-                    <div class="rotator"></div>
-                </div>
-                <div class="rotator"></div>
-            </div>
-            <div class="rotator"></div>
-        </div>
-        <div class="rotator"></div>
+  <div *ngIf="isLoading">
+    <app-loader/>
     </div>
-</div>
 
  
     <h1>You are looking for a particular car?</h1>
