--- a/fancy-cars/src/app/user/my-cars/my-cars.component.html
+++ b/fancy-cars/src/app/user/my-cars/my-cars.component.html
@@ -1,27 +1,9 @@
 <app-hero>
     <h1>{{username}}'s Cars</h1>
 
-    <div class="loading-container" *ngIf="isLoading">
-      <div class="loading-progress">
-          <div class="rotator">
-              <div class="rotator">
-                  <div class="rotator colored">
-                      <div class="rotator">
-                          <div class="rotator colored">
-                              <div class="rotator colored"></div>
-                              <div class="rotator"></div>
-                          </div>
-                          <div class="rotator colored"></div>
-                      </div>
-                      <div class="rotator"></div>
-                  </div>
-                  <div class="rotator"></div>
-              </div>
-              <div class="rotator"></div>
-          </div>
-          <div class="rotator"></div>
+    <div *ngIf="isLoading">
+      <app-loader/>
       </div>
-  </div>
 
     <div class="center" *ngIf="myCars.length !== 0">
 
